--- a/source/Drey.DomainModel/Drey.DomainModel.csproj
+++ b/source/Drey.DomainModel/Drey.DomainModel.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="Empty.cs" />
     <Compile Include="EnvironmentInfo.cs" />
+    <Compile Include="FileDownloadOptions.cs" />
     <Compile Include="IRuntimeClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
