--- a/tests/Drey.Server.Tests/packages.config
+++ b/tests/Drey.Server.Tests/packages.config
@@ -2,8 +2,10 @@
 <packages>
   <package id="CsQuery" version="1.3.4" targetFramework="net451" />
   <package id="FakeItEasy" version="1.25.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.3.0" targetFramework="net451" />
