--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Directors\OpenLogFileDirector.cs" />
     <Compile Include="EventBus.cs" />
     <Compile Include="Exceptions\RuntimeHasNotConnectedException.cs" />
+    <Compile Include="Extensions\ExceptionExtensions.cs" />
     <Compile Include="Extensions\TaskExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Hubs\RuntimeHub.cs" />
