--- a/tests/Drey.Configuration.Tests/packages.config
+++ b/tests/Drey.Configuration.Tests/packages.config
@@ -7,9 +7,10 @@
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
   <package id="Shouldly" version="2.6.0" targetFramework="net451" />
-  <package id="xunit" version="2.0.0" targetFramework="net451" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net451" />
-  <package id="xunit.assert" version="2.0.0" targetFramework="net451" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net451" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net451" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net451" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net451" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net451" />
+  <package id="xunit.runner.msbuild" version="2.1.0" targetFramework="net451" />
+  <package id="xunit.runner.visualstudio" version="2.1.0" targetFramework="net451" />
 </packages>
