Added hub tests to boost code coverage.

--- a/tests/Drey.Server.Tests/Drey.Server.Tests.csproj
+++ b/tests/Drey.Server.Tests/Drey.Server.Tests.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Directors\ListLogsDirectorTests.cs" />
     <Compile Include="Directors\OpenLogFileDirectorTests.cs" />
     <Compile Include="Fixtures\ReleasesStorage.cs" />
+    <Compile Include="Hubs\RuntimeHubTests.cs" />
     <Compile Include="Modules\LogsModulesTests.cs" />
     <Compile Include="Modules\NugetUploadModuleTests.cs" />
     <Compile Include="Fixtures\ApiTestFixture.cs" />
