--- a/source/Drey.Configuration/Drey.Configuration.csproj
+++ b/source/Drey.Configuration/Drey.Configuration.csproj
@@ -45,6 +45,10 @@
     <Reference Include="FluentMigrator.Runner">
       <HintPath>..\..\packages\FluentMigrator.1.6.0\tools\FluentMigrator.Runner.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.SignalR.Client, Version=2.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Microsoft.AspNet.SignalR.Client.2.2.0\lib\net45\Microsoft.AspNet.SignalR.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.Web.XmlTransform">
       <HintPath>..\..\packages\Microsoft.Web.Xdt.2.1.1\lib\net40\Microsoft.Web.XmlTransform.dll</HintPath>
     </Reference>
@@ -64,6 +68,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Nancy.Viewengines.Razor.1.3.0\lib\net40\Nancy.ViewEngines.Razor.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.6.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NuGet.Core, Version=2.8.60717.93, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\NuGet.Core.2.8.6\lib\net40-Client\NuGet.Core.dll</HintPath>
@@ -76,6 +84,7 @@
       <HintPath>..\..\packages\System.Data.SQLite.Core.1.0.98.0\lib\net451\System.Data.SQLite.dll</HintPath>
     </Reference>
     <Reference Include="System.IO.Compression.FileSystem" />
+    <Reference Include="System.Management" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Extensions">
       <HintPath>..\..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
@@ -99,12 +108,15 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="DataModel\Package.cs" />
     <Compile Include="DataModel\Release.cs" />
+    <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="Infrastructure\Events\RecycleApp.cs" />
     <Compile Include="Infrastructure\IHandle.cs" />
     <Compile Include="Infrastructure\EventBus.cs" />
     <Compile Include="Infrastructure\Schema\0100\201508241409_Register_DreyConfigurationApp.cs" />
     <Compile Include="Infrastructure\Schema\MigrationManager.cs" />
+    <Compile Include="Infrastructure\SignalR\HubConnectionManager.cs" />
+    <Compile Include="Infrastructure\SignalR\IHubConnectionManager.cs" />
     <Compile Include="Modules\AppletModule.cs" />
     <Compile Include="Modules\BaseModule.cs" />
     <Compile Include="RazorConfig.cs" />
@@ -130,14 +142,20 @@
     <Compile Include="Repositories\SQLiteRepositories\PackageSettingRepository.cs" />
     <Compile Include="Repositories\SQLiteRepositories\SqlRepository.cs" />
     <Compile Include="ServiceModel\IPollingClient.cs" />
+    <Compile Include="ServiceModel\IRemoteInvocationService.cs" />
+    <Compile Include="ServiceModel\ListLogsService.cs" />
+    <Compile Include="ServiceModel\OpenLogFileService.cs" />
     <Compile Include="ServiceModel\RegisteredPackagesPollingClient.cs" />
     <Compile Include="ServiceModel\ReleasesPollingClient.cs" />
     <Compile Include="ServiceModel\PollingClientCollection.cs" />
+    <Compile Include="ServiceModel\RemoteInvocationService.cs" />
+    <Compile Include="ServiceModel\ReportHealthService.cs" />
     <Compile Include="Services\ApplicationSettingsService.cs" />
     <Compile Include="Services\ConnectionStringsService.cs" />
     <Compile Include="Services\GlobalSettingsService.cs" />
     <Compile Include="Services\IGlobalSettingsService.cs" />
     <Compile Include="Services\IPackageService.cs" />
+    <Compile Include="ServiceModel\IReportPeriodically.cs" />
     <Compile Include="Services\PackageService.cs" />
     <Compile Include="Services\ViewModels\AppletDashboardPmo.cs" />
     <Compile Include="Services\ViewModels\AppSettingPmo.cs" />
@@ -186,6 +204,10 @@
     <EmbeddedResource Include="Scripts\jquery-2.1.4.min.js" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Drey.DomainModel\Drey.DomainModel.csproj">
+      <Project>{424b2437-2f2e-414c-a353-aa8bbbc6e052}</Project>
+      <Name>Drey.DomainModel</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Drey\Drey.csproj">
       <Project>{6403704c-14d9-4069-ad3d-8eeef95f499c}</Project>
       <Name>Drey</Name>
