--- a/source/Drey.Configuration/packages.config
+++ b/source/Drey.Configuration/packages.config
@@ -6,6 +6,7 @@
   <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.4" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Client" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net451" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net451" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net451" />
@@ -14,6 +15,7 @@
   <package id="Nancy.Hosting.Self" version="1.3.0" targetFramework="net451" />
   <package id="Nancy.Validation.DataAnnotations" version="1.3.0" targetFramework="net451" />
   <package id="Nancy.Viewengines.Razor" version="1.3.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
   <package id="System.Data.SQLite.Core" version="1.0.98.0" targetFramework="net451" />
 </packages>
