--- a/samples/Samples.Server/packages.config
+++ b/samples/Samples.Server/packages.config
@@ -1,13 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.5.2" targetFramework="net451" />
+  <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net451" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.SelfHost" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net451" />
   <package id="Nancy" version="1.3.0" targetFramework="net451" />
+  <package id="Nancy.Bootstrappers.Autofac" version="1.3.0" targetFramework="net451" />
   <package id="Nancy.Owin" version="1.3.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net451" />
   <package id="NLog" version="4.1.2" targetFramework="net451" />
   <package id="NuGet.Core" version="2.8.6" targetFramework="net451" />
   <package id="Owin" version="1.0" targetFramework="net451" />
