--- a/source/Drey.DebugRunner/nlog.config
+++ b/source/Drey.DebugRunner/nlog.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<!--<?xml version="1.0" encoding="utf-8" ?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
@@ -12,4 +12,4 @@
   <rules>
     <logger name="*" minLevel="Trace" writeTo="Console" />
   </rules>
-</nlog>
+</nlog>-->
