--- a/source/Drey/Drey.csproj
+++ b/source/Drey/Drey.csproj
@@ -48,12 +48,14 @@
     <Compile Include="AppConfigConnectionStrings.cs" />
     <Compile Include="App_Packages\LibLog.4.2\LibLog.cs" />
     <Compile Include="DreyConstants.cs" />
+    <Compile Include="Extensions\AssemblyExtensions.cs" />
     <Compile Include="Extensions\EnumerableExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="HordeServiceControl.cs" />
     <Compile Include="ApplicationHostNutConfiguration.cs" />
     <Compile Include="Nut\DefaultAppSetting.cs" />
     <Compile Include="Nut\DefaultConnectionString.cs" />
+    <Compile Include="Nut\ExecutionMode.cs" />
     <Compile Include="Nut\IApplicationSettings.cs" />
     <Compile Include="Nut\IConnectionStrings.cs" />
     <Compile Include="Nut\IGlobalSettings.cs" />
