--- a/source/Drey.Runtime/App.config
+++ b/source/Drey.Runtime/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <clear />
-    <add key="WorkingDirectory" value="./" />
+    <add key="WorkingDirectory" value="~/" />
     <add key="drey.configuration.consoleport" value="8080" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
