Client can now connect to demo server.

--- a/source/Drey.Runtime/App.config
+++ b/source/Drey.Runtime/App.config
@@ -4,7 +4,7 @@
     <clear />
     <add key="WorkingDirectory" value="~/" />
     <add key="drey.configuration.consoleport" value="8080" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
+    <add key="server.sslthumbprint" value="49E36DFA0583739725FEA1C22AB5A0FBA7B39756"/>
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
