--- a/samples/Samples.Server/packages.config
+++ b/samples/Samples.Server/packages.config
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net451" />
+  <package id="Autofac.Owin" version="3.1.0" targetFramework="net451" />
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.SignalR.Owin" version="1.2.2" targetFramework="net451" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net451" />
+  <package id="Microsoft.Owin.Cors" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net451" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net451" />
