--- a/source/Drey.Server/Drey.Server.csproj
+++ b/source/Drey.Server/Drey.Server.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Modules\NugetUploadModule.cs" />
     <Compile Include="Modules\well-known\ReleasesModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServerConstants.cs" />
     <Compile Include="ServerErrorHandler.cs" />
     <Compile Include="Services\FilesytemFileService.cs" />
     <Compile Include="Services\IClientHealthService.cs" />
