--- a/source/Drey.Server/Drey.Server.nuspec
+++ b/source/Drey.Server/Drey.Server.nuspec
@@ -20,5 +20,6 @@
   </metadata>
   <files>
     <file src="bin\$configuration$\Drey.Server.dll" target="lib\net451" />
+    <file src="bin\$configuration$\Drey.DomainModel.dll" target="lib\net451" />
   </files>
 </package>
